--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "442bcc0c-3921-4fa3-ac35-ad64f509c687",
-   "metadata": {},
+   "id": "e1c1d39d",
+   "metadata": {
+    "cellId": "sbcfctcoa7sgbadf4kn5fb"
+   },
    "source": [
     "# Глубокое обучение\n",
     "\n",
@@ -12,8 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80dccc02-0a41-4458-839f-fb7226577dea",
-   "metadata": {},
+   "id": "fdc39cfe",
+   "metadata": {
+    "cellId": "emuidac8t3rvqgpbv2vpo8",
+    "execution_id": "716b1fc8-fc51-4100-9fbc-8358b165769e"
+   },
    "source": [
     "## Содержание\n",
     "\n",
@@ -28,24 +33,22 @@
     "1. [Предсказание стоимости недвижимости](./intermediate-models/house-prices/%D0%9F%D1%80%D0%B5%D0%B4%D1%81%D0%BA%D0%B0%D0%B7%D0%B0%D0%BD%D0%B8%D0%B5%20%D1%81%D1%82%D0%BE%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B5%D0%B4%D0%B2%D0%B8%D0%B6%D0%B8%D0%BC%D0%BE%D1%81%D1%82%D0%B8.ipynb)\n",
     "___\n",
     "3. Глава 5. Глубокое обучение в технологиях компьютерного зрения\n",
-    "    1. [Сверточная нейронная сеть с нуля](./chapter-5/%D0%A1%D0%B2%D0%B5%D1%80%D1%82%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BD%D0%B5%D0%B9%D1%80%D0%BE%D0%BD%D0%BD%D0%B0%D1%8F%20%D1%81%D0%B5%D1%82%D1%8C%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F.ipynb)"
+    "    1. [Сверточная нейронная сеть с нуля](./chapter-5/%D0%A1%D0%B2%D0%B5%D1%80%D1%82%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BD%D0%B5%D0%B9%D1%80%D0%BE%D0%BD%D0%BD%D0%B0%D1%8F%20%D1%81%D0%B5%D1%82%D1%8C%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F.ipynb)\n",
+    "    2. [Использование предварительно обученной CNN](./chapter-5/%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%BD%D0%BE%D0%B9%20CNN.ipynb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83a9abf5-eded-4317-90ac-46361f9eab6d",
-   "metadata": {},
+   "id": "ca207568",
+   "metadata": {
+    "cellId": "wdt8mfkhg8sf9qfm9hdd"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -56,8 +59,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
-  }
+   "version": "3.7.7"
+  },
+  "notebookId": "ca93d2e5-2d23-4443-a75a-134c5eb72f15",
+  "notebookPath": "deep-learning/Main.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 5
