--- a/Main.ipynb
+++ b/Main.ipynb
@@ -13,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "018effc1",
    "metadata": {
@@ -34,21 +35,20 @@
     "___\n",
     "3. Глава 5. Глубокое обучение в технологиях компьютерного зрения\n",
     "    1. [Сверточная нейронная сеть с нуля](./chapter-5/%D0%A1%D0%B2%D0%B5%D1%80%D1%82%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BD%D0%B5%D0%B9%D1%80%D0%BE%D0%BD%D0%BD%D0%B0%D1%8F%20%D1%81%D0%B5%D1%82%D1%8C%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F.ipynb)\n",
-    "    2. [Использование предварительно обученной CNN](./chapter-5/%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%BD%D0%BE%D0%B9%20CNN.ipynb)"
+    "    2. [Использование предварительно обученной CNN](./chapter-5/%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%BD%D0%BE%D0%B9%20CNN.ipynb)\n",
+    "___\n",
+    "__Промежуточная проверка знаний__\n",
+    "1. [Классификация изображений Тома и Джерри](./intermediate-models/tom-and-jerry/Классификация изображений Тома и Джери.ipynb)\n",
+    "___"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a001a575",
-   "metadata": {
-    "cellId": "wdt8mfkhg8sf9qfm9hdd"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -59,10 +59,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "notebookId": "ca93d2e5-2d23-4443-a75a-134c5eb72f15",
-  "notebookPath": "deep-learning/Main.ipynb"
+  "notebookPath": "deep-learning/Main.ipynb",
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
