--- a/intermediate-models/house-prices/Предсказание стоимости недвижимости.ipynb
+++ b/intermediate-models/house-prices/Предсказание стоимости недвижимости.ipynb
@@ -596,6 +596,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -606,10 +611,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "notebookId": "084f1d45-d54b-41ff-8922-3d188736c409",
-  "notebookPath": "deep-learning/intermediate-models/house-prices/Предсказание стоимости недвижимости.ipynb"
+  "notebookPath": "deep-learning/intermediate-models/house-prices/Предсказание стоимости недвижимости.ipynb",
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
