--- a/Main.ipynb
+++ b/Main.ipynb
@@ -13,7 +13,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "018effc1",
    "metadata": {
@@ -38,14 +37,22 @@
     "    2. [Использование предварительно обученной CNN](./chapter-5/%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%BD%D0%BE%D0%B9%20CNN.ipynb)\n",
     "___\n",
     "__Промежуточная проверка знаний__\n",
-    "1. [Классификация изображений Тома и Джерри](./intermediate-models/tom-and-jerry/Классификация изображений Тома и Джери.ipynb)\n",
+    "1. [Классификация изображений Тома и Джерри](./intermediate-models/tom-and-jerry/%D0%9A%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F%20%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9%20%D0%A2%D0%BE%D0%BC%D0%B0%20%D0%B8%20%D0%94%D0%B6%D0%B5%D1%80%D1%80%D0%B8.ipynb)\n",
     "___"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75e85cf2-ff4a-4741-8df2-46f2828fcc6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.6"
   },
   "notebookId": "ca93d2e5-2d23-4443-a75a-134c5eb72f15",
   "notebookPath": "deep-learning/Main.ipynb",
